<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="accountDetails">Account details</string>

    <string name="aggregator_status_off">Logging stopped</string>
    <string name="aggregator_status_on">Logging positions</string>

    <string name="app_id" translatable="false">807375232223</string>
    <string name="app_name">Virus Tracker</string>

    <string name="authentication_failed">Authentication failed</string>

    <string name="bio_auth_negative_button_toast">Come back when sure about your health status!</string>
    <string name="bio_auth_prompt_negative_button">Cancel</string>
    <string name="bio_auth_prompt_subtitle">Confirm your health status change</string>
    <string name="bio_auth_prompt_title">Biometric authentication</string>
    <string name="bio_auth_success_toast">Authentication succeeded!</string>

    <string name="can_t_Download_Offline">Can\'t download while offline</string>
    <string name="can_t_Upload_Offline">Can\'t upload while offline</string>

    <string name="cannot_retrieve_positions">Cannot retrieve positions from database</string>

    <string name="connection_error" translatable="false">CONNECTION ERROR</string>

    <string name="docSnap_success_upload" translatable="false">Document snapshot successfully added to firestore.</string>

    <string name="download">Download</string>

    <string name="downloading">Downloading …</string>

    <string name="email">E-mail</string>

    <string name="error_infection_status_ratelimit">You can\'t change your infection status more than once a day</string>
    <string name="error_status_update">Error updating user infection status.</string>

    <string name="exchange_failed" translatable="false">EXCHANGE Failed</string>
    <string name="exchange_succed" translatable="false">EXCHANGE Succeeded</string>

    <string name="gps_signal_missing">Missing GPS signal</string>
    <string name="gps_status_off">GPS signal lost</string>
    <string name="gps_status_on">GPS signal acquired</string>

    <string name="i_am_cured">I am cured</string>
    <string name="i_am_infected">I am infected</string>

    <string name="infection_dialog_cool_message">Fortunately, you have not met anyone sick since last time.</string>
    <string name="infection_dialog_message1">"Watch out! You met "</string>
    <string name="infection_dialog_title">Daily report</string>
    <string name="infection_probability">Infection Probability</string>
    <string name="infection_status_posted">Posted!</string>

    <string name="intro_page1_description">Using the heatmap to check zones at risk</string>
    <string name="intro_page1_title">&#128270; Stay aware of your surroundings</string>
    <string name="intro_page2_description">To let other users know and alert them if they might have been infected</string>
    <string name="intro_page2_title">&#127777;️ Indicate your infection status</string>
    <string name="intro_page3_description">In real-time, computed from your geolocated interactions with other users</string>
    <string name="intro_page3_title">&#128200; Get your infection probability</string>
    <string name="intro_page4_title">🔑 Keep your information safe</string>
    <string name="intro_page4_description">Only you can access your data and make sensible changes, using our biometric authentication</string>

    <string name="latitude">Latitude</string>

    <string name="launch_firebase">Launch Firebase</string>
    <string name="launch_gps">Launch GPS</string>
    <string name="launch_history">Launch History</string>
    <string name="launch_intro">Launch Intro</string>
    <string name="launch_signin">Launch SignIn</string>
    <string name="launch_tabs">Launch Tabs</string>
    <string name="launch_user_infection">Launch User Infection</string>

    <string name="loading_with_dots">Loading…</string>

    <string name="logged_in_user" translatable="false">logged in user</string>

    <string name="longitude">Longitude</string>

    <string name="my_past_positions">My past positions</string>

    <string name="no_data_uploaded_yet">No data uploaded yet.</string>

    <string name="one_infection_dialog_message2">" infected person!"</string>

    <string name="past_positions">Past positions</string>

    <string name="query_ok">QUERY OK</string>

    <string name="refresh">Refresh</string>

    <string name="see_my_last_path">See my last path</string>

    <string name="send">Send</string>

    <string name="several_infection_dialog_message2">" infected persons!"</string>

    <string name="sign_in" translatable="false">SignIn</string>

    <string name="signin_text">&#127880; Sign in with your Google account to begin!</string>

    <string name="signout">Sign out</string>

    <string name="since_last_month">Since last month</string>

    <string name="sync_error" translatable="false">SYNC ERROR!</string>
    <string name="sync_ok" translatable="false">SYNC OK</string>

    <string name="tab_account">Account</string>
    <string name="tab_history">History</string>
    <string name="tab_map">Map</string>
    <string name="tab_status">Status</string>

    <string name="textView" translatable="false">TextView</string>

    <string name="three_dots" translatable="false">…</string>

    <string name="title_activity_firebase" translatable="false">FirebaseActivity</string>

    <string name="todo" translatable="false">TODO</string>

    <string name="unexpected_error">Unexpected error: </string>

    <string name="uploading">Uploading …</string>
    <string name="uploading_with_dots">Uploading…</string>

    <string name="user_id" translatable="false">#%1$s</string>
    <string name="user_status_update">User infection status successfully updated!</string>

    <string name="waiting_for_gps">Waiting for GPS…</string>

    <string name="you_cannot_update_your_status_you_are_offline">Can\'t upload when offline. Come back later!</string>

    <string name="your_user_status_is_set_to_infected">Your user status is set to infected.</string>
    <string name="your_user_status_is_set_to_not_infected">Your user status is set to not infected.</string>
    <string name="profile_picture">Profile picture</string>
    <string name="placeholder" translatable="false">...</string>
    <string name="delete_local_his">Delete local history</string>
    <string name="no_corresponding_path">No corresponding path</string>
    <string name="yesterday" translatable="false">yesterday</string>
    <string name="before_yesterday" translatable="false">before yesterday</string>
    <string name="with_proba">Your infection probability:</string>
    <string name="infected">Infected</string>
    <string name="not_infected">Not infected</string>
    <string name="no_path_to_show">No path to show</string>
    <string name="click_to_see_whole_path">Click on the magnifier to see the whole path</string>
    <string name="missing_permission">Missing permission</string>
    <string name="cannot_retr_pos_from_db">Cannot retrieve positions from database</string>
    <string name="refresh_to_see_status">Refresh to see your status</string>
    <string name="infection_proba">Infection Probability</string>
    <string name="pls_check_internet_co">Please check your internet connection</string>

    <string name="yesterday_label">Yesterday</string>
    <string name="before_yesterday_label">Before yesterday</string>
    <string name="toggle_heatmap_label">Toggle heatmap</string>
    <string name="focus_path_label">Whole path</string>
    <string name="my_location_label">My location</string>
    <string name="missing_GPS_Perm_Dialog_title">Missing permission</string>
    <string name="missing_GPS_Perm_Dialog_text">You refused the GPS permission. The app need
    it to work. Please press OK and allow the GPS or press cancel to close the app</string>
    <string name="internet_offline_msg">You are not connected to the Internet. You will not receive updates on your status</string>
    <string name="background_protection_msg">Your protection is currently active in background. You can pause it anytime</string>
</resources>
