<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FirebaseView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirebaseActivity">

    <TextView
        android:id="@+id/FirebaseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="106dp"
        android:text="@string/title_activity_firebase"
        app:layout_constraintBottom_toTopOf="@+id/FirebaseInputText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/FirebaseInputText"
        android:layout_width="180dp"
        android:layout_height="37dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_text"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/FirebaseUploadConfirmation"
        app:layout_constraintEnd_toStartOf="@+id/FirebaseUploadButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirebaseTextView" />

    <Button
        android:id="@+id/FirebaseUploadButton"
        android:layout_width="91dp"
        android:layout_height="36dp"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="195dp"
        android:text="@string/send"
        app:layout_constraintBottom_toTopOf="@+id/FirebaseDownloadResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/FirebaseInputText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FirebaseUploadConfirmation"
        android:layout_width="132dp"
        android:layout_height="0dp"
        android:layout_marginBottom="69dp"
        app:layout_constraintBottom_toTopOf="@+id/FirebaseDownloadButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirebaseInputText" />

    <Button
        android:id="@+id/FirebaseDownloadButton"
        android:layout_width="157dp"
        android:layout_height="43dp"
        android:layout_marginBottom="22dp"
        android:text="@string/download"
        app:layout_constraintBottom_toTopOf="@+id/FirebaseDownloadResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirebaseUploadConfirmation" />

    <TextView
        android:id="@+id/FirebaseDownloadResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="204dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirebaseUploadButton" />

</androidx.constraintlayout.widget.ConstraintLayout>